zmi: avoid line breaks in userlist (UniBE)

--- a/Products/zms/plugins/www/zmi.core.css
+++ b/Products/zms/plugins/www/zmi.core.css
@@ -2131,16 +2131,29 @@ body.lazy_select_form footer .controls {
 .zmi.users.config .table tbody tr td i {
 	margin:0 .3rem;
 }
+.btn.btn-secondary.alert-danger:hover {
+	background: #dc3545 !important;
+}
+.zmi.users.config .table tbody tr.userName,
+.zmi.users.config .table tbody tr.userRole {
+	white-space:nowrap;
+}
 .zmi.users.config .table tbody tr.userName td input,
 .zmi.users.config .table tbody tr.userRole td input {
 	margin-left:.3rem;
 }
-.btn.btn-secondary.alert-danger:hover {
-	background: #dc3545 !important;
-}
 .zmi.users.config .table th,
 .zmi.users.config .table td {
 	vertical-align:middle;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: calc(50vw - 1rem);
+}
+@media (max-width: 546px) {
+	.zmi.users.config .table th,
+	.zmi.users.config .table td {
+		max-width: calc(100vw - 1rem);
+	}
 }
 .zmi.users.config .table td ol.breadcrumb {
 	padding:0;
